crates/swc-react-native-worklets/tests/snapshots/transform_test__worklet_class_marker_preserves_default_export.snap
---
source: crates/swc-react-native-worklets/tests/transform_test.rs
expression: out
---
const _worklet_10268711743850_init_data = {
    code: '(function Sky__classFactory_SampleTs1() {\n    const Sky__classFactory_SampleTs1 = this._recur;\n    function _class_call_check(instance, Constructor) {\n        if (!(instance instanceof Constructor)) throw new TypeError("Cannot call a class as a function");\n    }\n    function _defineProperties(target, props) {\n        for(var i = 0; i < props.length; i++){\n            var descriptor = props[i];\n            descriptor.enumerable = descriptor.enumerable || false;\n            descriptor.configurable = true;\n            if ("value" in descriptor) descriptor.writable = true;\n            Object.defineProperty(target, descriptor.key, descriptor);\n        }\n    }\n    function _create_class(Constructor, protoProps, staticProps) {\n        if (protoProps) _defineProperties(Constructor.prototype, protoProps);\n        if (staticProps) _defineProperties(Constructor, staticProps);\n        return Constructor;\n    }\n    let Sky = /*#__PURE__*/ function() {\n        function Sky() {\n            _class_call_check(this, Sky);\n        }\n        _create_class(Sky, [\n            {\n                key: "draw",\n                value: function draw() {\n                    this.x = 1;\n                }\n            }\n        ]);\n        return Sky;\n    }();\n    Sky.Sky__classFactory = Sky__classFactory_SampleTs1;\n    return Sky;\n})',
    location: "Sample.ts"
};
const Sky__classFactory = (function Sky__classFactory_SampleTs1Factory([_worklet_10268711743850_init_data]) {
    const _e = [
        new global.Error(),
        1,
        -27
    ];
    const Sky__classFactory = function() {
        "use no memo";
        function _class_call_check(instance, Constructor) {
            if (!(instance instanceof Constructor)) throw new TypeError("Cannot call a class as a function");
        }
        function _defineProperties(target, props) {
            for(var i = 0; i < props.length; i++){
                var descriptor = props[i];
                descriptor.enumerable = descriptor.enumerable || false;
                descriptor.configurable = true;
                if ("value" in descriptor) descriptor.writable = true;
                Object.defineProperty(target, descriptor.key, descriptor);
            }
        }
        function _create_class(Constructor, protoProps, staticProps) {
            if (protoProps) _defineProperties(Constructor.prototype, protoProps);
            if (staticProps) _defineProperties(Constructor, staticProps);
            return Constructor;
        }
        let Sky = /*#__PURE__*/ function() {
            "use strict";
            function Sky() {
                _class_call_check(this, Sky);
            }
            _create_class(Sky, [
                {
                    key: "draw",
                    value: function draw() {
                        this.x = 1;
                    }
                }
            ]);
            return Sky;
        }();
        Sky.Sky__classFactory = Sky__classFactory;
        return Sky;
    };
    Sky__classFactory.__workletHash = 10268711743850;
    Sky__classFactory.__pluginVersion = "test";
    Sky__classFactory.__initData = _worklet_10268711743850_init_data;
    Sky__classFactory.__stackDetails = _e;
    return Sky__classFactory;
})([
    _worklet_10268711743850_init_data
]);
const Sky = Sky__classFactory();
export default Sky;
