crates/swc-react-native-worklets/tests/snapshots/transform_test__worklet_class_marker_skipped_when_disabled.snap
---
source: crates/swc-react-native-worklets/tests/transform_test.rs
expression: out
---
class Sky {
    __workletClass = true;
    draw() {
        this.x = 1;
    }
}
